[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/server.rs"
name = "redis-server"

[[bin]]
path = "src/cli.rs"
name = "redis-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
