[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/server.rs"
name = "redis-server"

[[bin]]
path = "src/cli.rs"
name = "redis-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
atoi = "2.0.0"
clap = { version = "4.5.3", features = ["derive"] }
nom = "7.1.3"
parking_lot = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
